[package]
name = "ethereum-private-key-to-address"
version = "0.1.0"
edition = "2021"
authors = ["David Kulman kulman.david@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kuly14/ethereum-private-key-to-address"
documentation = "https://docs.rs/ethereum-private-key-to-address/latest/ethereum-private-key-to-address"
description = "Library that converts private key to valid ethereum address." 

keywords = ["ethereum", "transaction", "crypto"]

categories = ["cryptography::cryptocurrencies"]

[dependencies]
sha3 = "0.10.6"
hex = "0.4.3"
secp256k1 = "0.25.0"
anyhow = "1"
